mule-user-guide/v/3.4/websphere-mq-example.adoc
= WebSphere MQ Example
:keywords: websphere mq, example, cloudhub

*_Enterprise Edition, CloudHub_* 

The WebSphere MQ example demonstrates how to use the link:/mule-user-guide/v/3.4/mule-wmq-transport-reference[Websphere MQ Transport]  to send and receive transactional messages to WebSphere MQ. This example is available in Mule Enterprise Edition.

==== Cooperate with WMQ

image:wmq.png[wmq] At times, you may find the need to bridge a communication gap between IBM's message queue product, Websphere MQ, and Mule.  To facilitate message processing across products, Mule uses a WMQ Endpoint. 

== Assumptions

This document assumes that you are familiar with Mule ESB. For an overview of basic operations, such as starting the server and locating Mule files, consult the link:/mule-management-console/v/3.4/mmc-walkthrough[MMC Walkthrough].

== Set Up and Run the Example

As with this WebSphere MQ example, you can create template applications straight out of the box in *Mule Studio* or **Mule Standalone **(Mule ESB without Studio). You can tweak the configurations of these use case-based templates to create your own customized applications in Mule.

==== Prerequisites

Before you run the example, ensure that your system meets the following conditions:

* Mule Enterprise 3.1 or later is installed
* WebSphere MQ 6 or 7 is installed
* the WebSphere MQ client JARs are available to you

Follow one of the two procedures below to create, then run the Websphere MQ application in Mule Studio or Mule Standalone.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. link:/mule-user-guide/v/3.4/mule-examples[*Create*] the example application in Mule Studio. _Do not run the application_.
. Add your WebSphere MQ client libraries to the project build path.
. Make sure your WebSphere MQ installation has queues named "in" and "out."
. link:/mule-user-guide/v/3.4/mule-examples[*Run*] the application. When the application starts, you may see some exceptions in the output console, since WMQ is not configured (we will configure it in the next step).
. Edit the following properties in `wmq.properties `(located at `src/main/resources`) with the values appropriate for your WebSphere MQ installation:
+

[source, code, linenums]
----
wmq.host=
wmq.port=
wmq.queue.manager=
wmq.username=
wmq.password=
----

. After configuring WMQ, restart the application.
....
[tab,title="Standalone"]
....
. Copy your WebSphere MQ client JARs to your `$MULE_HOME/lib/user` directory.
+
[TIP]
`<MULE_HOME>` is the root directory of your Mule installation, for example `/opt/Mule/mule-standalone-3.3.1.`

. Ensure that your WebSphere MQ installation has queues named "in" and "out."
. Copy the example's zip file, for example, `<MULE_HOME>/examples/wmq/mule-example-wmq-3.3.1.zip`, to the `$MULE_HOME/apps` directory.
. Start Mule, then wait for it to install the example. You may see some exceptions in the logs, since WMQ is not configured yet (we will configure it in the next step).
+
*How to start the Mule server*
+
There are several ways to start/stop the Mule server:
+
* Using the link:/mule-management-console/v/3.4[Mule Management Console], which provides a graphical interface for managing servers
* Using the link:/mule-management-console/v/3.4/mmc-walkthrough[command line]
+
Generally, the simplest way to start the server is by using the command line:
+
* On a Linux/Unix system, run the following command:
+
[source, code, linenums]
----
<MULE_HOME>/bin/mule start
----
+
On a Windows system, go to the `<MULE_HOME>\bin` by running the following command:
+
[source, code, linenums]
----
cd <MULE_HOME>\bin
----

. Edit the following properties in the file <`MULE_HOME>/apps/mule-example-wmq/classes/wmq.properties` with the values appropriate for your Websphere MQ installation:
+
[source, code, linenums]
----
wmq.host=
wmq.port=
wmq.queue.manager=
wmq.username=
wmq.password=
----

. After configuring WMQ, restart Mule or reload the application.

[TIP]
====
*How to reload the Websphere MQ app without restarting Mule (Unix)*
If you modify the Websphere MQ application while Mule is running, you can reload the application without restarting Mule by "touching" (updating the timestamps of) the file `<MULE_HOME>/apps/mule-example-bookstore-3.3.1/mule-config.xml`.

To update the timestamps, run the following command:

[source, code, linenums]
----
touch <MULE_HOME>/apps/mule-example-wmq-3.3.1/mule-config.xml
----

Mule automatically reloads the application, activating any modifications.
====

....
------

In this section we will demonstrate basic usage of the application: sending text messages, then retrieving them from a Websphere MQ using Mule.

. After Mule starts up, open a Web browser and navigate to the following URL: +
http://localhost:8086/services/wmqExample
+
image:WMQ+01.jpeg[WMQ+01]

. The application prompts you to enter text to send a message to WebSphere MQ. The app transmits your input via AJAX/WMQ to the Mule application's "in" queue and you will receive confirmation that your message has been submitted. Enter some text, then hit "Send".
+
image:WMQ+03.jpeg[WMQ+03]

. Mule processes the message sent to the "in" queue, then it sends the confirmation to you via the "out" queue and WMQ/AJAX. Note that Mule introduces an intentional 15 second delay between receiving your message and sending you a confirmation . Mule notifies you when the message is received and its content will be added to the table below. +
+
image:WMQ+04.jpeg[WMQ+04] +
+

. Play with it! Start typing several messages in the text box, then hit "Send" to submit them to Mule via AJAX/WMQ. After 15 seconds of intentional delay, the Mule confirms receipt of the messages.
+
image:WMQ+05.jpeg[WMQ+05]


== How it works

=== Global Elements

Mule configures the `WMQ connector` with the values previously defined on the `wmq.properties` file. In MuleStudio, this configuration is stored as a link:/docs/display/34X/Understand+Global+Mule+Elements[Global Element], named wmqConnector. To view the configured global element, click the *Global Elements* tab under the canvas, then double-click the `wmqConnector` Global Element. Studio displays the *Global Element Properties*, shown below:

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:global_WMQ_connector.png[global_WMQ_connector]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, code, linenums]
----
<wmq:connector name="wmqConnector" hostName="${wmq.host}" port="${wmq.port}" queueManager="${wmq.queue.manager}" username="${wmq.username}" password="${wmq.password}" doc:name="WMQ Connector">
    <ee:reconnect-forever/>
</wmq:connector>
----
....
------

To be able to send and receive Mule events asynchronously to and from a web browser, we use an AJAX connector. Double-click the connector in the canvas to display its properties:

[tabs]
------
[tab,title="Studio XML Editor"]
....
image:global_ajax.png[global_ajax]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, code, linenums]
----
<ajax:connector name="ajaxServer" serverUrl="http://0.0.0.0:8086/services/wmqExample"
        resourceBase="${app.home}/docroot" disableReplyTo="true" doc:name="Ajax"/>
----
....
------

=== Flows

The application contains three flows, which process, then retrieve messages from a WMQ.

==== Input flow

The first building block in the flow is an link:/mule-user-guide/v/3.4/ajax-endpoint-reference[AJAX Inbound Endpoint], which listens for messages on the configured channel, `/services/wmqExample/enqueue`. The flow adds the incoming messages to the "in" queue.

==== MessageProcessor Flow

The *MessageProcessor* flow reads from the "in" queue. The flow's *test component* appends a string to the message, waits 15 seconds, then adds the message to the ' out ' queue.

==== Output Flow

The *Output* flow reads messages from the " out " queue, then publishes via the AJAX outbound endpoint.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:wmqFlows.png[wmqFlows]
....
[tab,title="Studio XML Editor or Standalone"]
....
[source, code, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
 
 
 
<mule xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:ajax="http://www.mulesoft.org/schema/mule/ajax" xmlns:wmq="http://www.mulesoft.org/schema/mule/ee/wmq" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:core="http://www.mulesoft.org/schema/mule/core" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core" xmlns:stdio="http://www.mulesoft.org/schema/mule/stdio" xmlns:test="http://www.mulesoft.org/schema/mule/test" xmlns:json="http://www.mulesoft.org/schema/mule/json" version="EE-3.4.0" xsi:schemaLocation="
 
http://www.mulesoft.org/schema/mule/ajax http://www.mulesoft.org/schema/mule/ajax/current/mule-ajax.xsd
 
http://www.mulesoft.org/schema/mule/ee/wmq http://www.mulesoft.org/schema/mule/ee/wmq/current/mule-wmq-ee.xsd
 
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 
http://www.mulesoft.org/schema/mule/ee/core http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
 
http://www.mulesoft.org/schema/mule/stdio http://www.mulesoft.org/schema/mule/stdio/current/mule-stdio.xsd
 
http://www.mulesoft.org/schema/mule/test http://www.mulesoft.org/schema/mule/test/current/mule-test.xsd
 
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd ">
 
    <spring:beans>
 
        <spring:bean id="property-placeholder" class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
 
            <spring:property name="location" value="classpath:wmq.properties"/>
 
        </spring:bean>
 
    </spring:beans>
 
    <wmq:connector name="wmqConnector" hostName="${wmq.host}" port="${wmq.port}" queueManager="${wmq.queue.manager}" username="${wmq.username}" password="${wmq.password} " doc:name="WMQ Connector" validateConnections="true">
 
        <ee:reconnect-forever/>
 
    </wmq:connector>
 
    <ajax:connector name="ajaxServer" serverUrl="http://0.0.0.0:8086/services/wmqExample" resourceBase="${app.home}/docroot" disableReplyTo="true" doc:name="Ajax"/>
 
    <flow name="Input" doc:name="Input">
 
        <ajax:inbound-endpoint channel="/services/wmqExample/enqueue" doc:name="Ajax"/>
 
        <message-properties-transformer doc:name="Message Properties">
 
            <delete-message-property key="MULE_REPLYTO"/>
 
        </message-properties-transformer>
 
        <wmq:outbound-endpoint queue="in" connector-ref="wmqConnector" doc:name="WMQ"/>
 
    </flow>
 
    <flow name="MessageProcessor" doc:name="MessageProcessor">
 
        <wmq:inbound-endpoint queue="in" connector-ref="wmqConnector" doc:name="WMQ">
 
            <wmq:transaction action="ALWAYS_BEGIN"/>
 
        </wmq:inbound-endpoint>
 
        <test:component appendString=" - processed" logMessageDetails="true" waitTime="15000"></test:component>
 
        <wmq:outbound-endpoint queue="out" connector-ref="wmqConnector" doc:name="WMQ">
 
            <wmq:transaction action="ALWAYS_JOIN"/>
 
        </wmq:outbound-endpoint>
 
    </flow>
 
    <flow name="Output" doc:name="Output">
 
        <wmq:inbound-endpoint queue="out" connector-ref="wmqConnector" doc:name="WMQ"/>
 
        <ajax:outbound-endpoint channel="/services/wmqExample/dequeue" cacheMessages="true" doc:name="Ajax"/>
 
    </flow>
 
</mule>
----
....
------

== See Also

* Explore more link:/mule-user-guide/v/3.4/mule-examples[Mule example applications].
* Learn more about the link:/mule-user-guide/v/3.4/wmq-endpoint-reference[WMQ Endpoint] in Mule Studio.
* Learn more about the link:/mule-user-guide/v/3.4/mule-wmq-transport-reference[WMQ transport] in Mule.
* Learn more about the link:/mule-user-guide/v/3.4/ajax-endpoint-reference[AJAX Endpoint] in Mule Studio.
* Learn more about the link:/mule-user-guide/v/3.4/ajax-transport-reference[AJAX transport] in Mule.
